# simple-interpreter

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
include/: char_utils.h  lexer.h  token.h
include/cli/: cli.h
include/lexer/: char_utils.h  lexer.h  token.h  token_utils.h
include/parser/: ast.h  ast_utils.h  parser.h
include/runner/: evaluate.h  message.h  operators.h  runner.h  runtime.h  var.h  var_hash_map.h
include/utils/: token_utils.h
src/: char_utils.c  lexer.c  main.c  token.c  token_utils.c
src/cli/: cli.c
src/lexer/: char_utils.c  lexer.c  token.c  token_utils.c
src/parser/: ast.c  ast_utils.c  parser.c
src/runner/: evaluate.c  operators.c  runner.c  var_hash_map.c
src/utils/: char_utils.c  token_utils.c
